# dtslam

./: .gitignore  CMakeLists.txt  LICENSE  prepare_linux_environment  readme.md
code/: CMakeLists.txt  dtslam_document.h
code/dtslam/: BaseRansac.h  BundleAdjuster.cpp  BundleAdjuster.h  CMakeLists.txt  CameraDistortionModel.cpp  CameraDistortionModel.h  CameraModel.cpp  CameraModel.h  CameraModelCeres.h  CeresParametrization.cpp  CeresParametrization.h  CeresUtils.h  Doxyfile  EpipolarSegmentError.h  EpipolarSegmentErrorImpl.hpp  EssentialEstimation.cpp  EssentialEstimation.h  EssentialUtils.h  FeatureIndexer.h  FeatureMatcher.cpp  FeatureMatcher.h  FrameLinker.cpp  FrameLinker.h  HomographyEstimation.cpp  HomographyEstimation.h  ImagePyramid.cpp  ImagePyramid.h  MatchRefiner.cpp  MatchRefiner.h  PatchWarper.cpp  PatchWarper.h  PnpEstimation.cpp  PnpEstimation.h  Pose3D.cpp  Pose3D.h  Pose3DCeres.h  PoseEstimation.cpp  PoseEstimation.h  PoseEstimationCommon.h  PoseTracker.cpp  (+28 more)
code/dtslam_desktop/: CMakeLists.txt  main.cpp
code/dtslam_ui/: Application.h  CMakeLists.txt  ImageDataSource.cpp  ImageDataSource.h  OpenCVDataSource.cpp  OpenCVDataSource.h  SequenceDataSource.cpp  SequenceDataSource.h  SlamDriver.cpp  SlamDriver.h  TextureHelper.cpp  TextureHelper.h  UserInterfaceInfo.cpp  UserInterfaceInfo.h  ViewportTiler.cpp  ViewportTiler.h  flags.cpp  flags.h
code/dtslam_ui/assets/: calibDanielNexus.txt  colorCamera_render.vert  color_render.vert  color_render4.frag  color_render4.vert  diffuse_render.frag  diffuse_render.vert  rect.frag  rect.vert  text_render.frag  texture_render.frag  texture_render_external_oes.frag  texture_render_fixed_alpha.frag  texture_render_fixed_alpha_external_oes.frag  texture_warp.frag  texture_warp.vert  texture_warp_fixed_alpha.frag
code/dtslam_ui/shaders/: ColorCameraShader.cpp  ColorCameraShader.h  ColorShader.cpp  ColorShader.h  DTSlamShaders.cpp  DTSlamShaders.h  ShaderProgram.cpp  ShaderProgram.h  StaticColors.h  TextRenderer.cpp  TextRenderer.h  TextShader.cpp  TextShader.h  TextureShader.cpp  TextureShader.h  TextureWarpShader.cpp  TextureWarpShader.h
code/dtslam_ui/windows/: ARWindow.cpp  ARWindow.h  BaseWindow.cpp  BaseWindow.h  FrameLinkWindow.cpp  FrameLinkWindow.h  KeyFramePairWindow.cpp  KeyFramePairWindow.h  MapExpanderWindow.cpp  MapExpanderWindow.h  MapWindow.cpp  MapWindow.h  MatchesWindow.cpp  MatchesWindow.h  TestMatchWindow.cpp  TestMatchWindow.h  TwoFrameWindow.cpp  TwoFrameWindow.h  WindowUtils.cpp  WindowUtils.h
code/matlab/: .gitignore  CauchyLoss.m  HuberLoss.m  QuaternionToR.m  SkewSymmetric.m  TestCheirality.m  TestEpipolar.m  absoluteOrientationQuaternion.m  absolute_orientation.m  animatePath.m  convertImages.m  distort.m  distortFOV.m  doVideoLoop.m  error_ellipse.m  evalCityOfSightsPose.m  evalCityOfSightsPoseB.m  evalRegionMerge.m  generateEpipolarSegmentImage.m  getCentroid.m  getMinMax.m  getTitle.m  getXnSegmentDistance.m  gradientHistogram.m  intersect_lines.m  nonlinearOrientation.m  params2K.m  plotAlignedPoints.m  plotEpipolarGeometry.m  plotPoseResults.m  projectFromWorld.m  projectFromWorldFOV.m  qGetR.m  rotationmat.m  rotationpars.m  showBestScores.m  showMatchData.m  stoploop.m  syntheticCalibration.m  testEpipolarSegmentDistance.m  (+6 more)
code/tests/: CMakeLists.txt  CameraModelTests.cpp  PoseEstimationTests.cpp
code/tests/alg_experiments/: CMakeLists.txt  simple_ncc.cpp
data/: calibWebcamDaniel.txt
data/CityOfSights/: calibFaro.txt  calibRobo.txt  readme.txt
